<resources>
    <string name="app_name" translatable="false">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="contact_the_police">Contact the POLICE!</string>
    <string name="new_crime">New Crime</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="list_is_empty">List is empty</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="call_suspect">Call suspect!</string>
    <string name="no_number">Contact doesn\'t exist or doesn\'t have a phone number</string>
    <string name="need_permission">We need your permission to call suspect</string>
    <string name="crime_picture_not_set">Crime picture (not set)</string>
    <string name="crime_picture_set">Crime picture (set)</string>
    <string name="take_crime_picture">Take crime picture</string>
    <string name="crime_date_label">Date</string>
    <string name="crime_time_label">Time</string>
    <string name="crime_suspect_label">Suspect</string>
    <string name="crime_report_label">Report</string>
    <string name="delete_crime">Delete crime</string>
    <string name="crime_deleted">Crime %s deleted</string>
</resources>