<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crime_details_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/crime_photo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@android:color/darker_gray"
                    android:contentDescription="@string/crime_picture_not_set"
                    android:cropToPadding="true"
                    android:scaleType="centerInside" />

                <ImageButton
                    android:id="@+id/crime_camera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/take_crime_picture"
                    android:src="@android:drawable/ic_menu_camera" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/crime_title"
                    android:text="@string/crime_title_label" />

                <EditText
                    android:id="@+id/crime_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/crime_title_hint" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/crime_date_label"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/crime_date"
            android:text="@string/crime_date_label" />


        <Button
            android:id="@+id/crime_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription=""
            tools:text="Wed Nov 14 2018" />

        <TextView
            android:id="@+id/crime_time_label"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/crime_time"
            android:text="@string/crime_time_label" />

        <Button
            android:id="@+id/crime_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="10:40" />

        <CheckBox
            android:id="@+id/crime_solved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crime_solved_label" />

        <TextView
            android:id="@+id/crime_suspect_label"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/crime_suspect"
            android:text="@string/crime_suspect_label" />

        <Button
            android:id="@+id/crime_suspect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crime_suspect_text" />

        <Button
            android:id="@+id/crime_call_suspect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_suspect" />

        <TextView
            android:id="@+id/crime_report_label"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crime_report_label" />

        <Button
            android:id="@+id/crime_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crime_report_text" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>